[project]
name = "research-utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Shinei Arakawa", email = "arakawashinei1115@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
