[project]
name = "research-utilities"
version = "1.1.8"
description = "Research utilities for computer vision and deep learning"
authors = [{ name = "Shinei Arakawa", email = "sarakawalab@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["computer vision", "deep learning", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "ninja>=1.11.1.4",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["gdown>=5.2.0", "pytest>=8.3.5"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
